--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "body-parser": "^1.20.3",
          "fs": "latest",
         "chalk": "^4.1.2",
+        "dotenv": "^16.4.1",
         "pino": "^9.5.0",
         "@octokit/rest": "latest",
         "readline-sync": "^1.4.10",
